feat: View Order & Fill History List